# YOBA

./: CMakeLists.txt  LICENSE  README.md  platformio.ini
examples/: rendering.cpp
examples/ESP-IDF/Direct rendering/: README.md  main.cpp
src/: action.h  animation.cpp  animation.h  application.cpp  application.h  bounds.cpp  bounds.h  callback.h  color.cpp  color.h  event.cpp  event.h  font.cpp  font.h  glyph.h  gradient.cpp  gradient.h  image.cpp  image.h  imageSource.h  image_source.h  main.cpp  main.h  margin.cpp  margin.h  math.h  number.h  point.h  screenOrientation.h  size.cpp  size.h  system.h  ui.h  vector.h  yoba.h
src/YOBA/: Core.hpp  Hardware.hpp  Rendering.hpp  System.hpp  UI.h  UI.hpp  core.h  main.h  rendering.h  system.h
src/YOBA/Core/: Color.cpp  Color.hpp  Colors.hpp  Font.cpp  Font.hpp  GeoCoordinates.hpp  Glyph.hpp  Gradient.cpp  Gradient.hpp  Image.cpp  Image.hpp  Margin.cpp  Margin.hpp  Math.hpp  Rectangle.cpp  Rectangle.hpp  Size.cpp  Text.cpp  Text.hpp  Transform.hpp  UTF-8.cpp  UTF-8.hpp  Vector2.hpp  Vector3.hpp
src/YOBA/Hardware/: Encoder.cpp  Encoder.hpp
src/YOBA/Rendering/: Bit8PaletteRenderer.cpp  Bit8PaletteRenderer.hpp  MonochromeRenderer.hpp  PaletteRenderer.hpp  RGB565Renderer.cpp  RGB565Renderer.hpp  Renderer.cpp  Renderer.hpp  TransactionalBufferedRenderer.cpp  TransactionalBufferedRenderer.hpp
src/YOBA/System/: Desktop.cpp  Desktop.hpp  ESP-IDF.cpp  ESP-IDF.hpp  Windows.cpp  Windows.hpp
src/YOBA/UI/: Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  Badge.hpp  Button.cpp  Button.hpp  ColorPalette.cpp  ColorPalette.hpp  ColorPicker.cpp  ColorPicker.hpp  Control.cpp  Control.hpp  Decorator.cpp  Decorator.hpp  Divider.cpp  Divider.hpp  Element.cpp  Element.hpp  ElementAndParent.hpp  HSBColorPalette.cpp  HSBColorPalette.hpp  ImageView.cpp  ImageView.hpp  Knob.cpp  Knob.hpp  Layout.cpp  Layout.hpp  MarginLayout.cpp  MarginLayout.hpp  Parent.cpp  Parent.hpp  ProgressBar.cpp  ProgressBar.hpp  RelativeStackLayout.cpp  RelativeStackLayout.hpp  ScrollBar.cpp  ScrollBar.hpp  ScrollView.cpp  ScrollView.hpp  (+69 more)
src/YOBA/core/: Alignment.hpp  Font.hpp  Gradient.hpp  Image.hpp  Rectangle.hpp  SinAndCos.hpp  Size.hpp  Transform.hpp  Vector3.hpp  color.cpp  color.h  font.cpp  font.h  geoCoordinates.h  gradient.h  image.cpp  image.h  margin.cpp  math.h  size.cpp  size.h  text.cpp  text.h  transform.h  utf-8.cpp  utf-8.h  vector2.h
src/YOBA/hardware/: Encoder.hpp  HID.h  encoder.cpp  encoder.h  inputDevice.h  rotaryEncoder.cpp  rotaryEncoder.h
src/YOBA/main/: bounds.cpp  bounds.h  callback.h  color.cpp  color.h  event.cpp  event.h  font.cpp  font.h  geoCoordinates.h  geographicCoordinates.h  glyph.h  gradient.cpp  gradient.h  image.cpp  image.h  inputDevice.h  key.h  margin.cpp  margin.h  math.h  orientation.h  rectangle.h  sinAndCos.h  size.cpp  size.h  transform.h  utf-8.h  vector2.h  vector3.h
src/YOBA/rendering/: BufferedRenderer.hpp  RGB565PixelBufferRenderer.cpp  RGB565PixelBufferRenderer.h  RGB565Renderer.cpp  RGB565Renderer.h  RenderingTarget.hpp  bit8PaletteRenderer.cpp  bit8PaletteRenderer.h  bufferedRenderer.cpp  bufferedRenderer.h  monochromeRenderer.cpp  monochromeRenderer.h  paletteRenderer.h  pixelBufferRenderer.cpp  pixelBufferRenderer.h  renderTarget.cpp  renderer.cpp  renderer.h  (+6 more)
src/fonts/: PIXY10Font.h  Unscii16Font.h  Unscii8ThinFont.h  font.cpp  font.h  glyph.h
src/hardware/: displays.h  inputDevice.h  touchPanels.h
src/main/: bounds.cpp  bounds.h  callback.h  color.cpp  color.h  event.cpp  event.h  font.cpp  font.h  glyph.cpp  glyph.h  gradient.cpp  gradient.h  image.h  margin.cpp  margin.h  math.h  size.cpp  size.h  vector.h  vector2.h
src/rendering/: bit8PaletteBufferedRenderer.cpp  bit8PaletteBufferedRenderer.h  bufferedRenderer.cpp  bufferedRenderer.h  monochromeBufferedRenderer.cpp  monochromeBufferedRenderer.h  paletteBufferedRenderer.cpp  paletteBufferedRenderer.h  renderTarget.cpp  renderTarget.h  renderer.cpp  renderer.h
src/ui/: animation.cpp  animation.h  application.cpp  application.h  background_aware.h  borderElement.h  button.cpp  button.h  circle.h  container.cpp  container.h  cornerRadiusElement.h  element.cpp  element.h  equalLayout.h  equalStackLayout.h  equal_layout.h  focusableElement.cpp  focusableElement.h  fontAware.cpp  fontAware.h  fontElement.cpp  fontElement.h  font_aware.h  foregroundAware.h  foreground_aware.h  image.h  imageView.h  keyboard.cpp  keyboard.h  knob.cpp  knob.h  layout.cpp  layout.h  modal.cpp  modal.h  primaryColorElement.h  progressBar.h  rectangle.h  relativeStackLayout.h  (+29 more)
(+506 files in other folders)
